--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ env:
   # github.repository as <account>/<repo>
   #IMAGE_NAME: ${{ github.repository }}
   IMAGE_NAME: examendaw
-  IMAGE_TAG: latest
+  IMAGE_TAG: 1.0
 
 jobs:
   build:
